--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=127.0.0.1
+DB_HOST=sql12.freesqldatabase.com
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=notes-db
+DB_USER=sql12741306
+DB_PASSWORD=l5QLsJnEem
+DB_NAME=sql12741306
