--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,11 @@
 name: Build and Push Docker Image to Docker Hub
 
-on: push
+on:
+ push:
+    branches: [ main ]
+ pull_request:
+    branches: [ main ]
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
