--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/notes-backend:latest
+          tags: ${{secrets.DOCKER_USERNAME}}/notes-backend:latest
