feat: add k8s folder

--- a/k8s/kubernetes.yml
+++ b/k8s/kubernetes.yml
@@ -29,3 +29,24 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: notes-backend-hpa
+  namespace: default
+spec:
+  minReplicas: 1
+  maxReplicas: 2
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: notes-backend
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 70
