--- a/k8s/kubernetes.yml
+++ b/k8s/kubernetes.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: notes-backend
-          image: fadillahrizki/notes-backend:latest
+          image: fadillahrizki/notes-backend:1.0.1
 ---
 apiVersion: v1
 kind: Service
